começando conteúdo no index

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, debitis, sapiente eum quasi quis at enim esse repudiandae ratione commodi ullam pariatur qui itaque eaque iure blanditiis facere expedita! Recusandae.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora alias, animi dolore assumenda, voluptatum atque illum possimus molestiae aspernatur cum ad aperiam quia dolorem pariatur quo corrupti! Amet, id hic!</p>
         </article>
     </main>
 </body>
